fix update request
